added demo bayes

--- a/notebook/assistance_file_ingest.ipynb
+++ b/notebook/assistance_file_ingest.ipynb
@@ -81,7 +81,7 @@
     "base_dir = os.getcwd()\n",
     "\n",
     "# Additional location to add\n",
-    "additional_location = \"file/DemoDFL.pptx\"\n",
+    "additional_location = \"data/DemoDFL.pptx\"\n",
     "\n",
     "# Combine paths using os.path.join()\n",
     "loc = os.path.join(base_dir, additional_location)\n",
