fix location issue

--- a/notebook/assistance_file_ingest.ipynb
+++ b/notebook/assistance_file_ingest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base Directory: c:\\Users\\faiza\\Videos\\Bayes\\GPT\\Assistant_OpenAI\n",
-      "Additional Location: file/DemoDFL.pptx\n",
-      "New Path: c:\\Users\\faiza\\Videos\\Bayes\\GPT\\Assistant_OpenAI\\file/DemoDFL.pptx\n"
+      "Base Directory: c:\\Users\\faiza\\Videos\\Bayes\\GPT\\Assistant_OpenAI\\notebook\n",
+      "Additional Location: ../data/DemoDFL.pptx\n",
+      "New Path: c:\\Users\\faiza\\Videos\\Bayes\\GPT\\Assistant_OpenAI\\notebook\\../data/DemoDFL.pptx\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
     "base_dir = os.getcwd()\n",
     "\n",
     "# Additional location to add\n",
-    "additional_location = \"data/DemoDFL.pptx\"\n",
+    "additional_location = \"../data/DemoDFL.pptx\"\n",
     "\n",
     "# Combine paths using os.path.join()\n",
     "loc = os.path.join(base_dir, additional_location)\n",
@@ -94,29 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FileObject(id='file-DmCJ5aXW1QY7yVueYG0K9COw', bytes=934888, created_at=1704824894, filename='Research_2.pdf', object='file', purpose='assistants', status='processed', status_details=None)\n"
+      "FileObject(id='file-7GQlY9pzo9iaLVmCn9yovrKQ', bytes=2221188, created_at=1705093060, filename='DemoDFL.pptx', object='file', purpose='assistants', status='processed', status_details=None)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'file-DmCJ5aXW1QY7yVueYG0K9COw'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_id=saveFileOpenAI(location=loc)\n"
+    "file_id=saveFileOpenAI(location=additional_location)\n"
    ]
   },
   {
