--- a/notebook/assistantretreival.ipynb
+++ b/notebook/assistantretreival.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# Upload a file with an \"assistants\" purpose\n",
     "file = client.files.create(\n",
-    "  file=open(\"DemoDFL.pptx\", \"rb\"),\n",
+    "  file=open(\"../data/DemoDFL.pptx\", \"rb\"),\n",
     "  purpose='assistants'\n",
     ")"
    ]
